# com_ipc

./: CMakeLists.txt  deploy.sh
doc/: README.md
inc/: action_client.h  action_server.h  com_ipc.h  com_ipc_types.h  memory_pool.h  node.h  publisher.h  service_client.h  service_server.h  subscriber.h  system_manager.h  udp_node.h
inc/com_ipc/api/: action_client.h  action_server.h  node.h  publisher.h  service_client.h  service_server.h  subscriber.h  udp_node.h
inc/com_ipc/core/: com_ipc_types.h  executor.h  memory_pool.h  protocol.h  system_manager.h
inc/com_ipc/qos/: qos_profile.h
scripts/: ai_tracker_node.py  hybrid_receiver.py  hybrid_sender.py  local_ai_node.py  multicast_receiver.py  qos_receiver.py  qos_sender.py  test_udp_receiver.py  test_udp_sender.py  test_udp_service_client.py  test_udp_service_server.py  virtual_sensor_node.py
src/: action_client.cpp  action_server.cpp  memory_pool.cpp  node.cpp  publisher.cpp  pybind_wrapper.cpp  service_client.cpp  service_server.cpp  subscriber.cpp  system_manager.cpp  udp_node.cpp
src/api/: action_client.cpp  action_server.cpp  node.cpp  publisher.cpp  service_client.cpp  service_server.cpp  subscriber.cpp  udp_node.cpp
src/core/: memory_pool.cpp  system_manager.cpp
test/: action_client.cpp  action_server.cpp  action_test.cpp  multi_node_test.cpp  pub_zerocopy.cpp  publisher.cpp  service_client.cpp  service_server.cpp  service_test.cpp  sub_zerocopy.cpp  subscriber.cpp
test/test/: action_client_test.cpp  action_server_test.cpp  service_client_test.cpp  service_server_test.cpp  topic_pub_test.cpp  topic_sub_test.cpp
tools/: com_bag.cpp  com_multicast_sender.cpp  com_node.cpp  com_router.cpp  com_topic.cpp
